--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "python.pythonPath": "C:\\Users\\kevin\\anaconda3\\envs\\pytorch\\python.exe"
+    "python.pythonPath": "C:\\Users\\kevin\\anaconda3\\envs\\tf2\\python.exe",
+    "python.linting.pylintEnabled": true,
+    "python.linting.flake8Enabled": false,
+    "python.linting.enabled": true
 }
